# travelsearch

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  constitution.md  docker-compose.yml  run-agents.sh  specification-trip-finder.md  specification.md
.specify/: feature.json
backend/: pyproject.toml  test_unit.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: cli.py  main.py
backend/app/core/: config.py  database.py  logging.py  redis.py  security.py
backend/app/models/: notification_log.py  property.py  search.py  tracked_property.py  tracked_search.py  user.py
backend/app/notifiers/: base.py  telegram.py
backend/app/providers/: airbnb.py  base.py  booking.py
backend/app/repositories/: notification_repository.py  property_repository.py  search_repository.py  tracking_repository.py  user_repository.py
backend/app/schemas/: auth.py  notification.py  search.py  tracked_property.py  tracked_search.py
backend/app/services/: auth_service.py  notification_service.py  search_service.py  telegram_bot_service.py  tracking_service.py
backend/app/workers/: property_worker.py  scheduler.py  search_worker.py
backend/tests/: conftest.py
backend/tests/contract/: conftest.py  test_airbnb_provider.py  test_booking_provider.py  test_telegram_notifier.py
backend/tests/integration/: test_data_isolation.py  test_search_api.py  test_telegram_linking.py  test_telegram_webhook.py  test_tracked_search_api.py
backend/tests/unit/: conftest.py  test_property_worker.py  test_search_diff.py  test_tracking_service.py
(+84 files in other folders)
